tests/integration/targets/playbooks/provision_playbook/example.com/platform/nexus/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: nexus
  namespace: nexus
  annotations:
    cert-manager.io/cluster-issuer: tavros
    kubernetes.io/ingress.class: prod
    konghq.com/strip-path: 'true'
    konghq.com/protocols: https
    konghq.com/https-redirect-status-code: '302'
spec:
  rules:
  - host: nexus.tavros.example.com
    http:
      paths:
      - path: /
        backend:
          serviceName: tavros-nexus-repository-manager
          servicePort: 8081
  tls:
  - hosts:
    - nexus.tavros.example.com
    secretName: nexus-ingress-cert
